syntax = "proto3";

package users;

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

message User {
  int32 id = 1;
  string name = 2;
  int32 age = 3;
  google.protobuf.Struct additionalInfo = 4;
}

service UserService {
  rpc GetFilteredUsers(google.protobuf.Empty) returns (stream User);
}